Update UI, packaging, and autodetect